Implement new job portal features